--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skeleventy",
+  "name": "khit",
   "version": "2.0.0",
-  "description": "Skeleventy - A skeleton boilerplate built with Eleventy",
+  "description": "KHIT - A blog about Tableau, Apple and other tech",
   "scripts": {
     "dev": "ELEVENTY_ENV=development npx @11ty/eleventy --config=eleventy.config.js --serve & webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && npx @11ty/eleventy --config=eleventy.config.js"
@@ -14,6 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy-plugin-rss": "^1.0.7",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "html-minifier": "^4.0.0",
     "laravel-mix": "^5.0.1",
     "laravel-mix-purgecss": "^4.2.0",
@@ -21,6 +23,7 @@
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "tailwindcss": "^1.2.0",
+    "tailwindcss-dark-mode": "^1.1.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
