--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/josephdyer/skeleventy.git"
+    "url": "https://github.com/khit/khit-site.git"
   },
-  "author": "Joseph Dyer",
+  "author": "Kye Hittle",
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
